apps/radar/envs/gke-prod-01/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: radar
  namespace: radar
  annotations:
    argocd.argoproj.io/sync-options: ServerSideApply=true
spec:
  parentRefs:
    - name: shared-gateway-int
      namespace: gateway-api
      group: gateway.networking.k8s.io
      kind: Gateway
  hostnames: ["radar.jksoam.in"]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: radar
          port: 9280
          kind: Service
          group: ''
          weight: 1
